fix true- half and bullet point spacing

--- a/index.css
+++ b/index.css
@@ -37,13 +37,13 @@
 
   .true-first-half {
     width: 44%;
-    padding: 52px 6% 80px 0;
-    border-right: 1px solid var(--GREY02);
+    padding: 52px 0 80px 6%;
+      border-left: 1px solid var(--GREY02);
   }
 
   .true-second-half {
     width: 44%;
-    padding: 52px 0 80px 6%;
+    padding: 52px 6% 80px 0;
   }
 
   .first-half{
@@ -185,7 +185,7 @@ a, p.readmore {
  height: 24px;
  border: 1px solid var(--GREY8);
  border-radius: 100%;
- margin-right: 24px;
+margin-left: 24px;
  margin-top: 4px;
  flex: none;
 }
@@ -430,12 +430,13 @@ section {
 
 #navbar {
   display: flex;
+  justify-content: flex-start;
   height: var(--regularNavbarHeight);
   margin: auto auto 0 auto;
 }
 
 #navbar > a {
-  margin: 23px 40px auto 0;
+  margin: 23px 0 auto 40px;
   color: white;
   transition: all 0.2s ease-in-out;
   border: none;
@@ -455,13 +456,12 @@ section {
 }
 
 #navbar a:last-of-type {
-  margin-right:0;
+  margin-left: 0;
 }
 
 #navbar a.oes-lab {
   background-color: white;
   color: var(--BLUE);
-  margin-right: auto;
   padding: 30px 12px 12px 12px;
   margin-top: -4px;
   border-radius: 0 0 4px 4px;
